--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ html, body {
     overflow: hidden;
 }
 .cb24 {
-    padding: 12px 0;
+    padding: 23px 0;
     /*cb类时清楚浮动的一个共用类，具体功能待学*/
     clear: both;
     height: 0;
@@ -138,7 +138,7 @@ html, body {
     max-width: 760px;
     min-width: 320px;
     z-index: 2;
-    font-size: 18px;;
+    font-size: 16px;;
 }
 
 .footer ul li {
@@ -146,6 +146,10 @@ html, body {
     text-align: center;
     width: 33%;
     /*有x个li宽度就是100%/x，以百分比的形式是最好实现自适应的方法。*/
+}
+.footer ul li img{
+    margin-top:4px;
+    height: 18px;
 }
 
 /*微信弹出层↓*/
