--- a/css/index.css
+++ b/css/index.css
@@ -26,12 +26,15 @@ a {
     text-decoration: none;
     color: #fff;
 }
-
+a,button,input{
+    -webkit-tap-highlight-color:rgba(255,0,0,0);
+}
+/*封装：当你写的a标签，在手机上点击时，会有一个蓝色或者其他颜色的边框，对用户体验比较差。可以在css里添加样式，去除默认样式 */
 body {
     font-family: helvetica neue, tahoma, arial, hiragino sans gb, microsoft yahei, sans-serif;
     font-size: 1.6rem;
     color: #333;
-    background: #f7f7f7;
+    background: #fff;
 }
 
 html, body {
@@ -71,7 +74,7 @@ html, body {
     overflow: hidden;
 }
 .cb24 {
-    padding: 23px 0;
+    padding: 18px 0;
     /*cb类时清楚浮动的一个共用类，具体功能待学*/
     clear: both;
     height: 0;
@@ -83,8 +86,9 @@ html, body {
 }
 .wrap {
     width: 100%;
-    padding:0 3px;
+    padding:0 10px;
     box-sizing: border-box;
+    /*background: url(../images/dingbu.jpg) -5px 0 repeat;*/
 }
 
 .swiper-container {
@@ -104,16 +108,19 @@ html, body {
     background-color: #fff;
     text-align: center;
     padding:15px;
+    border: 2px dashed #a3cea8;
+    margin:8px 25px;
 }
 .info h2{
     margin-bottom: 5px;
-    font-size:1.2rem;
+    font-size:1.4rem;
 }
 .info h2,.info p{
     color: #ccc;
     font-family:"楷体";
-    font-size:0.8rem;
-
+}
+.info p{
+    font-size:1rem;
 }
 .img{
     margin-top: 5px;
